Aligns header correctly

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,7 +37,7 @@ body {
 	margin-left: auto;
   margin-right: auto;
 	border-bottom: solid 1px #dce6f0;
-  padding: 2rem 3rem;
+  padding: 2rem 0rem;
 	max-width: 1280px;
 	margin-bottom: 4rem;
 	display: flex;
